update layout calculator_activity add operator and redesign

--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -10,10 +10,11 @@
         android:id="@+id/tv_display"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:layout_weight="1"
+        android:gravity="right|bottom"
         android:padding="16dp"
         android:text="0.00"
-        android:textSize="24dp" />
+        android:textSize="32dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,21 +23,32 @@
 
         <Button
             android:id="@+id/btn_seven"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="7" />
 
         <Button
             android:id="@+id/btn_eight"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="8" />
 
         <Button
             android:id="@+id/btn_nine"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="9" />
+
+        <Button
+            android:id="@+id/btn_operator_divide"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:text="/" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -46,21 +58,31 @@
 
         <Button
             android:id="@+id/btn_four"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="4" />
 
         <Button
             android:id="@+id/btn_five"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="5" />
 
         <Button
             android:id="@+id/btn_six"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="6" />
+
+        <Button
+            android:id="@+id/btn_operator_multiply"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:text="*" />
     </LinearLayout>
 
     <LinearLayout
@@ -70,21 +92,31 @@
 
         <Button
             android:id="@+id/btn_one"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="1" />
 
         <Button
             android:id="@+id/btn_two"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="2" />
 
         <Button
             android:id="@+id/btn_there"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="3" />
+
+        <Button
+            android:id="@+id/btn_operator_minus"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:text="-" />
     </LinearLayout>
 
     <LinearLayout
@@ -94,20 +126,36 @@
 
         <Button
             android:id="@+id/btn_clear"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="c" />
 
         <Button
             android:id="@+id/btn_zero"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="0" />
 
         <Button
             android:id="@+id/btn_dot"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="." />
+
+        <Button
+            android:id="@+id/btn_operator_plus"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:text="+" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_operator_equals"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="=" />
 </LinearLayout>
